tests/NormalTests/paczka2/big_fuzzy/20668107.err
Error in line 1: FxEs A420 55,01
Error in line 10: A343 A284 13,8
Error in line 4: FxEs A420 245,7
Error in line 18: OCmV5z S80 46,7
Error in line 30: OCmV5z A420 85,2
Error in line 26: qx4W8 A420 22,0
Error in line 39: Uo2KebvH A284 79,0
Error in line 40: Uo2KebvH A420 35,8
Error in line 37: FxEs A343 64,3
Error in line 42: ozfovjvZw1X A343 28,7
Error in line 62: ozfovjvZw1X S80 20,94
Error in line 49: ozfovjvZw1X A284 46,5
Error in line 47: FxEs A284 95,7
Error in line 55: UfzvOT25CD A420 113,1
Error in line 64: Uo2KebvH A343 92,0
Error in line 73: qx4W8 A343 98,8
Error in line 88: OCmV5z S80 38,5
Error in line 91: ozfovjvZw1X A284 38,2
Error in line 92: ozfovjvZw1X S80 17,2
Error in line 94: qx4W8 S80 29,4
Error in line 96: FxEs A343 67,2
Error in line 99: FxEs S80 36,3
Error in line 100: ozfovjvZw1X A420 254,2
Error in line 105: FxEs A343 37,4
Error in line 108: A343 A284 69,1
Error in line 126: A343 A343 53,1
Error in line 149: qx4W8 S80 62,6
Error in line 151: qx4W8 A420 13,5
Error in line 154: ozfovjvZw1X A284 59,7
Error in line 150: FxEs A343 235,4
Error in line 174: A343 S80 57,0
Error in line 175: ozfovjvZw1X S80 57,3
Error in line 173: FxEs A284 14,8
Error in line 180: ozfovjvZw1X A420 5,3
Error in line 181: FxEs S80 13,6
Error in line 185: FxEs A343 9,1
Error in line 195: UfzvOT25CD S80 49,5
Error in line 199: UfzvOT25CD A343 82,0
Error in line 202: UfzvOT25CD S80 55,1
Error in line 186: OCmV5z S80 70,0
Error in line 219: OCmV5z S80 75,1
Error in line 229: ozfovjvZw1X S80 556,8
Error in line 237: qx4W8 S80 5,9
